feat: add job execution summaries